# o3webapp-fe

./: .stestr.conf  README.md  docker-compose-example.yml  requirements.txt  setup.cfg  tox.ini
.sqa/: config.yml  docker-compose.yml
docker/: .dockerignore  Dockerfile  Dockerfile.cicd
o3webapp-fe/: .eslintignore  .eslintrc.json  package-lock.json  package.json
o3webapp-fe/public/: bokeh-2.2.3.min.js  bokeh-tables-2.2.3.min.js  bokeh-widgets-2.2.3.min.js  index.html  manifest.json
o3webapp-fe/src/: App.css  App.js  config.json  index.css  setupTests.js
o3webapp-fe/src/components/ModelController/: ModelController.css  ModelController.js  ModelController.test.js
o3webapp-fe/src/components/download/: DownloadSection.css  DownloadSection.js  DownloadSection.test.js
o3webapp-fe/src/components/forms/: Generationform.css  Generationform.js  Manipulationform.js
o3webapp-fe/src/components/navigation/: Navigation.css  Navigation.js  Navigation.test.js  NavigationTab.css  NavigationTab.js  NavigationTab.test.js
o3webapp-fe/src/pages/About/: About.js  About.test.js
o3webapp-fe/src/pages/Home/: Home.css  (+1 more)
o3webapp-fe/src/utility/: Url_from_env.js
o3webapp/react-frontend/: .gitignore  package-lock.json  package.json
o3webapp/react-frontend/mock-up-backend/: .gitignore  package-lock.json
o3webapp/react-frontend/public/: index.html
o3webapp/react-frontend/src/: App.js  config.json  index.css
o3webapp/tests/: test_unit.py
test-mockups/mock-up-backend/: package-lock.json
test-mockups/mock-up-backend/response-files/: models-list.json  plot_mockup.json
(+81 files in other folders)
