[metadata]
name = o3as webapp
summary = O3as WebApp for the Ozone assessment service to analyse ozone projections
description-file =
    README.md
author = KIT-IMK, KIT-SCC
author-email = 
version = 0.1.0
license = GNU LGPLv3
home-page = https://git.scc.kit.edu/synergy.o3as/o3as
classifier =
    Intended Audience :: Climate community
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    o3webapp
